examples/test/testpolicy14756.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14756
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key11: value1
      key10: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value22
          key46: value34
          key29: value19
      podSelector:
        matchLabels:
          key12: value37
          key10: value12
